update user role and password logic, auto-open modal on error and edit the style table